[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2"
aoc-runner-derive = "0.2"
enum_dispatch = "0.2"
petgraph = "0.4"