[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "programmer"
path = "src/programmer.rs"

[dependencies]
aoc-runner = "0.2"
aoc-runner-derive = "0.2"
crossbeam-channel = "0.4"
enum_dispatch = "0.2"
itertools = "0.8"
petgraph = "0.4"
rayon = "1"
scoped_threadpool = "0.1"